Sample Notebook for Model Interpretibility using SHAP and LIME added

--- a/A_Crash_Course_in_Statistical_Learning/ML_Data_Cleaning_and_Feature_Selection/ML_Data_Cleaning_and_Feature_Selection_Abalone.ipynb
+++ b/A_Crash_Course_in_Statistical_Learning/ML_Data_Cleaning_and_Feature_Selection/ML_Data_Cleaning_and_Feature_Selection_Abalone.ipynb
@@ -181,7 +181,7 @@
     }
    ],
    "source": [
-    "#installing dependencies\n",
+    "# installing dependencies\n",
     "!pip install eli5"
    ]
   },
@@ -223,8 +223,10 @@
    },
    "outputs": [],
    "source": [
-    "#Reading the ablone dataset\n",
-    "data = pd.read_csv(\"https://raw.githubusercontent.com/aiskunks/YouTube/main/CSV/abalone.csv\")"
+    "# Reading the ablone dataset\n",
+    "data = pd.read_csv(\n",
+    "    \"https://raw.githubusercontent.com/aiskunks/YouTube/main/CSV/abalone.csv\"\n",
+    ")"
    ]
   },
   {
@@ -365,7 +367,7 @@
     }
    ],
    "source": [
-    "#Viewing data in the file \n",
+    "# Viewing data in the file\n",
     "data.head()"
    ]
   },
@@ -401,7 +403,7 @@
     }
    ],
    "source": [
-    "#checking if the any data is missing\n",
+    "# checking if the any data is missing\n",
     "data.isnull().sum()"
    ]
   },
@@ -554,20 +556,22 @@
     }
    ],
    "source": [
-    "#checking the distribution of independent variables\n",
+    "# checking the distribution of independent variables\n",
     "from statsmodels.graphics.gofplots import qqplot\n",
-    "data_norm=data[['Length', 'Diameter', 'Height', 'Whole weight', 'Shucked weight',\n",
-    "       'Viscera weight']]\n",
+    "\n",
+    "data_norm = data[\n",
+    "    [\"Length\", \"Diameter\", \"Height\", \"Whole weight\", \"Shucked weight\", \"Viscera weight\"]\n",
+    "]\n",
     "for c in data_norm.columns[:]:\n",
-    "  plt.figure(figsize=(8,5))\n",
-    "  fig=qqplot(data_norm[c],line='45',fit='True')\n",
-    "  plt.xticks(fontsize=13)\n",
-    "  plt.yticks(fontsize=13)\n",
-    "  plt.xlabel(\"Theoretical quantiles\",fontsize=15)\n",
-    "  plt.ylabel(\"Sample quantiles\",fontsize=15)\n",
-    "  plt.title(\"Q-Q plot of {}\".format(c),fontsize=16)\n",
-    "  plt.grid(True)\n",
-    "  plt.show()\n"
+    "    plt.figure(figsize=(8, 5))\n",
+    "    fig = qqplot(data_norm[c], line=\"45\", fit=\"True\")\n",
+    "    plt.xticks(fontsize=13)\n",
+    "    plt.yticks(fontsize=13)\n",
+    "    plt.xlabel(\"Theoretical quantiles\", fontsize=15)\n",
+    "    plt.ylabel(\"Sample quantiles\", fontsize=15)\n",
+    "    plt.title(\"Q-Q plot of {}\".format(c), fontsize=16)\n",
+    "    plt.grid(True)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -616,8 +620,8 @@
     }
    ],
    "source": [
-    "#Checking the Ranges of the predictor variables and dependent variable\n",
-    "plt.figure(figsize=(20,7))\n",
+    "# Checking the Ranges of the predictor variables and dependent variable\n",
+    "plt.figure(figsize=(20, 7))\n",
     "sns.boxplot(data=data)"
    ]
   },
@@ -654,7 +658,7 @@
    },
    "outputs": [],
    "source": [
-    "#Creating binary vaiables for sex \n",
+    "# Creating binary vaiables for sex\n",
     "\n",
     "data = pd.get_dummies(data)\n",
     "\n",
@@ -663,7 +667,7 @@
     "from sklearn import preprocessing\n",
     "\n",
     "# Create x to store scaled values as floats\n",
-    "x = data[['Rings']].values.astype(float)\n",
+    "x = data[[\"Rings\"]].values.astype(float)\n",
     "\n",
     "# Preparing for normalizing\n",
     "min_max_scaler = preprocessing.MinMaxScaler()\n",
@@ -672,8 +676,7 @@
     "x_scaled = min_max_scaler.fit_transform(x)\n",
     "\n",
     "# Run the normalizer on the dataframe\n",
-    "data[['Rings']] = pd.DataFrame(x_scaled)\n",
-    "\n"
+    "data[[\"Rings\"]] = pd.DataFrame(x_scaled)"
    ]
   },
   {
@@ -826,7 +829,7 @@
     }
    ],
    "source": [
-    "#data after nromalizing and feature creation\n",
+    "# data after nromalizing and feature creation\n",
     "data.head()"
    ]
   },
@@ -866,8 +869,8 @@
     }
    ],
    "source": [
-    "#Checking the Ranges of the predictor variables and dependent variable after normalizing\n",
-    "plt.figure(figsize=(20,7))\n",
+    "# Checking the Ranges of the predictor variables and dependent variable after normalizing\n",
+    "plt.figure(figsize=(20, 7))\n",
     "sns.boxplot(data=data)"
    ]
   },
@@ -1145,7 +1148,7 @@
     }
    ],
    "source": [
-    "#checking the correlation between all the features in the data\n",
+    "# checking the correlation between all the features in the data\n",
     "data.corr()"
    ]
   },
@@ -1192,9 +1195,9 @@
     }
    ],
    "source": [
-    "#the heat map of the correlation\n",
-    "plt.figure(figsize=(20,7))\n",
-    "sns.heatmap(data.corr(), annot=True, cmap='RdYlGn')"
+    "# the heat map of the correlation\n",
+    "plt.figure(figsize=(20, 7))\n",
+    "sns.heatmap(data.corr(), annot=True, cmap=\"RdYlGn\")"
    ]
   },
   {
@@ -1242,8 +1245,8 @@
     }
    ],
    "source": [
-    "#pair plot to check the colinearity\n",
-    "sns.pairplot(data) "
+    "# pair plot to check the colinearity\n",
+    "sns.pairplot(data)"
    ]
   },
   {
@@ -1411,11 +1414,26 @@
     }
    ],
    "source": [
-    "#Using OLS for finding the p value to check the significant features\n",
+    "# Using OLS for finding the p value to check the significant features\n",
     "import statsmodels.api as sm\n",
     "\n",
-    "model = sm.OLS(data['Rings'], data[['Length', 'Diameter', 'Height', 'Whole weight', 'Shucked weight',\n",
-    "       'Viscera weight', 'Shell weight','Sex_I', 'Sex_M', 'Sex_F']]).fit()\n",
+    "model = sm.OLS(\n",
+    "    data[\"Rings\"],\n",
+    "    data[\n",
+    "        [\n",
+    "            \"Length\",\n",
+    "            \"Diameter\",\n",
+    "            \"Height\",\n",
+    "            \"Whole weight\",\n",
+    "            \"Shucked weight\",\n",
+    "            \"Viscera weight\",\n",
+    "            \"Shell weight\",\n",
+    "            \"Sex_I\",\n",
+    "            \"Sex_M\",\n",
+    "            \"Sex_F\",\n",
+    "        ]\n",
+    "    ],\n",
+    ").fit()\n",
     "\n",
     "# Print out the statistics\n",
     "model.summary()"
@@ -1474,18 +1492,32 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import  train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X = data[ ['Length', 'Diameter', 'Height', 'Whole weight', 'Shucked weight',\n",
-    "       'Viscera weight', 'Shell weight', 'Sex_F', 'Sex_I', 'Sex_M']]\n",
+    "X = data[\n",
+    "    [\n",
+    "        \"Length\",\n",
+    "        \"Diameter\",\n",
+    "        \"Height\",\n",
+    "        \"Whole weight\",\n",
+    "        \"Shucked weight\",\n",
+    "        \"Viscera weight\",\n",
+    "        \"Shell weight\",\n",
+    "        \"Sex_F\",\n",
+    "        \"Sex_I\",\n",
+    "        \"Sex_M\",\n",
+    "    ]\n",
+    "]\n",
     "\n",
-    "y = data['Rings']\n",
+    "y = data[\"Rings\"]\n",
     "\n",
-    "#Spliting data into Training 76.5%, Validation set 13.5% and Test set 10%\n",
+    "# Spliting data into Training 76.5%, Validation set 13.5% and Test set 10%\n",
     "\n",
     "X_t, X_test, y_t, y_test = train_test_split(X, y, test_size=0.1, random_state=1)\n",
     "\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X_t, y_t, test_size=0.15, random_state=1)"
+    "X_train, X_val, y_train, y_val = train_test_split(\n",
+    "    X_t, y_t, test_size=0.15, random_state=1\n",
+    ")"
    ]
   },
   {
@@ -1623,27 +1655,62 @@
    ],
    "source": [
     "# Looking the data for test, training and validation set\n",
-    "X_test_plot = X_test[['Length', 'Diameter', 'Height', 'Whole weight', 'Shucked weight',\n",
-    "       'Viscera weight', 'Shell weight','Sex_I', 'Sex_M', 'Sex_F']]\n",
+    "X_test_plot = X_test[\n",
+    "    [\n",
+    "        \"Length\",\n",
+    "        \"Diameter\",\n",
+    "        \"Height\",\n",
+    "        \"Whole weight\",\n",
+    "        \"Shucked weight\",\n",
+    "        \"Viscera weight\",\n",
+    "        \"Shell weight\",\n",
+    "        \"Sex_I\",\n",
+    "        \"Sex_M\",\n",
+    "        \"Sex_F\",\n",
+    "    ]\n",
+    "]\n",
     "\n",
-    "X_val_plot = X_val[['Length', 'Diameter', 'Height', 'Whole weight', 'Shucked weight',\n",
-    "       'Viscera weight', 'Shell weight','Sex_I', 'Sex_M', 'Sex_F']]\n",
+    "X_val_plot = X_val[\n",
+    "    [\n",
+    "        \"Length\",\n",
+    "        \"Diameter\",\n",
+    "        \"Height\",\n",
+    "        \"Whole weight\",\n",
+    "        \"Shucked weight\",\n",
+    "        \"Viscera weight\",\n",
+    "        \"Shell weight\",\n",
+    "        \"Sex_I\",\n",
+    "        \"Sex_M\",\n",
+    "        \"Sex_F\",\n",
+    "    ]\n",
+    "]\n",
     "\n",
-    "X_train_plot = X_train[['Length', 'Diameter', 'Height', 'Whole weight', 'Shucked weight',\n",
-    "       'Viscera weight', 'Shell weight','Sex_I', 'Sex_M', 'Sex_F']]\n",
+    "X_train_plot = X_train[\n",
+    "    [\n",
+    "        \"Length\",\n",
+    "        \"Diameter\",\n",
+    "        \"Height\",\n",
+    "        \"Whole weight\",\n",
+    "        \"Shucked weight\",\n",
+    "        \"Viscera weight\",\n",
+    "        \"Shell weight\",\n",
+    "        \"Sex_I\",\n",
+    "        \"Sex_M\",\n",
+    "        \"Sex_F\",\n",
+    "    ]\n",
+    "]\n",
     "\n",
     "# Plotting the data to see the histogram\n",
     "for c in X_test_plot.columns[:]:\n",
-    "  plt.figure(figsize=(8,6))\n",
-    "  plt.hist(X_val_plot[c], bins=20, alpha=0.5, label=\"validation\")\n",
-    "  plt.hist(X_test_plot[c], bins=20, alpha=0.5, label=\"test\")\n",
-    "  plt.hist(X_train_plot[c], bins=20, alpha=0.5, label=\"train\")\n",
-    "  plt.xlabel(c, size=14)\n",
-    "  plt.ylabel(\"Count\", size=14)\n",
-    "  plt.legend(loc='upper right')\n",
-    "  plt.title(\"{} distribution\".format(c))\n",
-    "  plt.show()\n",
-    " "
+    "    plt.figure(figsize=(8, 6))\n",
+    "    plt.hist(X_val_plot[c], bins=20, alpha=0.5, label=\"validation\")\n",
+    "    plt.hist(X_test_plot[c], bins=20, alpha=0.5, label=\"test\")\n",
+    "    plt.hist(X_train_plot[c], bins=20, alpha=0.5, label=\"train\")\n",
+    "    plt.xlabel(c, size=14)\n",
+    "    plt.ylabel(\"Count\", size=14)\n",
+    "    plt.legend(loc=\"upper right\")\n",
+    "    plt.title(\"{} distribution\".format(c))\n",
+    "    plt.show()"
    ]
   },
   {
@@ -1680,7 +1747,7 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.metrics import r2_score, mean_squared_error \n",
+    "from sklearn.metrics import r2_score, mean_squared_error\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn import datasets, linear_model"
    ]
@@ -1722,8 +1789,7 @@
     "regr = linear_model.LinearRegression()\n",
     "\n",
     "# Train the model using the training sets\n",
-    "regr.fit(X_train,y_train)\n",
-    "\n"
+    "regr.fit(X_train, y_train)"
    ]
   },
   {
@@ -1767,11 +1833,11 @@
     "# Make predictions using the training set\n",
     "y_pred = regr.predict(X_train)\n",
     "# The mean squared error\n",
-    "print('Mean squared error: %.2f'% mean_squared_error(y_train, y_pred))\n",
+    "print(\"Mean squared error: %.2f\" % mean_squared_error(y_train, y_pred))\n",
     "# The coefficient of determination: 1 is perfect prediction\n",
-    "print('Coefficient of determination: %.2f'% r2_score(y_train, y_pred))\n",
-    "r2 = r2_score(y_train,y_pred)\n",
-    "print('R^2 score on tarining set =',r2)"
+    "print(\"Coefficient of determination: %.2f\" % r2_score(y_train, y_pred))\n",
+    "r2 = r2_score(y_train, y_pred)\n",
+    "print(\"R^2 score on tarining set =\", r2)"
    ]
   },
   {
@@ -1806,11 +1872,11 @@
     "# Make predictions using the testing set\n",
     "y_pred = regr.predict(X_test)\n",
     "# The mean squared error\n",
-    "print('Mean squared error: %.2f'% mean_squared_error(y_test, y_pred))\n",
+    "print(\"Mean squared error: %.2f\" % mean_squared_error(y_test, y_pred))\n",
     "# The coefficient of determination: 1 is perfect prediction\n",
-    "print('Coefficient of determination: %.2f'% r2_score(y_test, y_pred))\n",
-    "r2 = r2_score(y_test,y_pred)\n",
-    "print('R^2 score on test set =',r2)\n"
+    "print(\"Coefficient of determination: %.2f\" % r2_score(y_test, y_pred))\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(\"R^2 score on test set =\", r2)"
    ]
   },
   {
@@ -1847,12 +1913,11 @@
     "y_pred = regr.predict(X_val)\n",
     "\n",
     "# The mean squared error\n",
-    "print('Mean squared error: %.2f'% mean_squared_error(y_val, y_pred))\n",
+    "print(\"Mean squared error: %.2f\" % mean_squared_error(y_val, y_pred))\n",
     "# The coefficient of determination: 1 is perfect prediction\n",
-    "print('Coefficient of determination: %.2f'% r2_score(y_val, y_pred))\n",
-    "r2_val = r2_score(y_val,y_pred)\n",
-    "print('R^2 score on validation set =',r2_val)\n",
-    "\n"
+    "print(\"Coefficient of determination: %.2f\" % r2_score(y_val, y_pred))\n",
+    "r2_val = r2_score(y_val, y_pred)\n",
+    "print(\"R^2 score on validation set =\", r2_val)"
    ]
   },
   {
@@ -2092,11 +2157,12 @@
     }
    ],
    "source": [
-    "#Understanding the important features \n",
+    "# Understanding the important features\n",
     "import eli5\n",
     "from eli5.sklearn import PermutationImportance\n",
+    "\n",
     "perm = PermutationImportance(regr, random_state=1).fit(X_test, y_test)\n",
-    "eli5.show_weights(perm, feature_names = X_test.columns.tolist())"
+    "eli5.show_weights(perm, feature_names=X_test.columns.tolist())"
    ]
   },
   {
