dataset source moved to aiskunks

--- a/A_Crash_Course_in_Statistical_Learning/ML_Data_Cleaning_and_Feature_Selection/ML Data Cleaning and Feature Selection.ipynb
+++ b/A_Crash_Course_in_Statistical_Learning/ML_Data_Cleaning_and_Feature_Selection/ML Data Cleaning and Feature Selection.ipynb
@@ -133,7 +133,7 @@
       },
       "outputs": [],
       "source": [
-        "url = \"https://raw.githubusercontent.com/midhunmohank/DS/master/Datasets/AB_NYC_2019.csv\"\n",
+        "url = \"../../CSV/AB_NYC_2019.csv\"\n",
         "df = pd.read_csv(url)"
       ]
     },
